--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -1,7 +1,9 @@
+@import-normalize;
 $color-1: #F9F7F7;
 $color-2: #DBE2EF;
 $color-3: #3F72AF;
 $color-4: #112D4E;
+$gradiant-4-3: linear-gradient(10deg, #112D4E, #3F72AF);
 
 /* to use, fonts are 'Fira Sans' and 'Roboto Slab' */
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap');
@@ -9,22 +11,25 @@ $color-4: #112D4E;
 
 @import './_header.scss';
 @import './_posts.scss';
+@import './_modal.scss';
+@import './_backdrop.scss';
 
-:root {
+#root {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    body {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $color-2;
-    }
+    
 }
-
+body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $color-2;
+}
 
